# BrainBuddy_BE

./: .gitignore  readme.md
Architecture/Components/: README.md
Architecture/Overview/: README.md
CodeSet/: .env  README.md  check_something.ipynb  requirements.txt  run_app_server.py  run_application.py  run_server.py  run_websocket.py  workflow.md
CodeSet/Application/: .env  main.py
CodeSet/WebSocket/: .env  CMakeLists.txt  README.md  main.cpp  main.py
CodeSet/WebSocket/core/: config.py  deps.py  utils.py
CodeSet/WebSocket/model/: __init__.py  infer.py  model.py  preprocess.py  the_best.pth
CodeSet/WebSocket/models/: __init__.py  score.py  security.py
CodeSet/WebSocket/orm/: __init__.py  score.py  security.py  users.py
CodeSet/WebSocket/repository/: __init__.py  aggregate.py  authenticate.py  repository.py
CodeSet/WebSocket/service/: __init__.py  focus.py  inference.py  realtime.py  security.py
CodeSet/WebSocket/ws/: handler.py  manager.py
CodeSet/app/: main.py
CodeSet/scripts/: install_requirements.sh
CodeSet/src/: main.py
CodeSet__/: README.md
Deployment/Application/: .env  main.py  requirements.txt  run_application.py
Deployment/WebServer/: README.md
Deployment/WebSocket/: .env  main.py  requirements.txt  run_websocket.py
Prod/: run_application.py
Prod/Application/: .env
Test/: 1304_dummy_users.csv  add_score_col.py  build_dummy_users.py  insert_local_db.py  insert_scores_table.py
Test/IMG/: test.py
Test/ModelLoad/: best_model.pth  inf2.py
Test/SSL/: cert.pem  dev.key  key.pem  localhost.cnf  tmp.md
(+146 files in other folders)
